--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description:        Sage is a WordPress starter theme. <a href="https://github.c
 Version:            8.4.0
 Author:             Roots
 Author URI:         https://roots.io/
-Text Domain:        sage
+Text Domain:        sage, bubba
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
